# souvlaki-index

./: .gitignore  README.md  app.py  db_utils.py  extract.py  main.py  pyproject.toml  queries.py  requirements.txt  scrape.py
.github/workflows/: testing.yaml
db/: schema.sql
static/: style.css
templates/: about.html  base.html  index.html  item.html
